afbeeldingen toegevoegd hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -115,7 +115,7 @@
                         Wel heb ik een foto van het eindresultaat waarbij alles aan elkaar gekoppeld zit en werkt.
                         Onderstaand zie je een foto waar de vochtsensor bovenin de afbeelding te zien is.
                     </p>
-                    <img class="logo" src="link" alt="naam" width="300" height="200">  
+                    <img class="logo" src="Hieke\afbeelding\moisture bovenaan.jpg" alt="naam" width="300" height="200">  
                     <p>Vervolgens kregen we de taak om al deze losse codes (onderdelen) in één volledige code te integreren.
                         Hierbij liepen enkele zaken mis. Het lukte me wel om de vochtsensor toe te voegen, omdat ik deze nog open had staan.
                         Vanuit dit startpunt voegde ik onderdelen toe, zoals het lampje en bijvoorbeeld het relais.
@@ -139,6 +139,8 @@
                         Hieronder staat mijn ontwerp uit het programma Eagle en een foto van mijn printplaatje die ik geleverd heb gekregen.
                     </p>
                     <img class="logo" src="link" alt="naam" width="300" height="200">  
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
                 <h4>Praktijk</h4>
                     <p> Wat ik vooral erg leuk vond, was toen we te horen kregen dat we de PCB-chip moesten vast solderen aan het zelfgemaakte printplaatje.
                         We gingen naar een werkplek op de HAN in Arnhem en kregen allemaal een eigen soldeerbout.
