afbeelding toegevoegd hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -161,7 +161,7 @@
                         Hieronder zie je een afbeelding met mijn eigen printplaatje en systeem in het bakje dat Tomas heeft ontworpen met mijn hulp.
                     </p>
                     <img class="logo" src="Hieke\afbeelding\totaal systeem.jpeg" alt="naam" width="300" height="200">  
-    
+                    <img class="logo" src="Hieke\afbeelding\ontwerp 3d.jpeg" alt="naam" width="200" height="200">  
                 <h4>Terugblik</h4>
                     <p> Na het reflecteren over wat ik heb geleerd, besef ik dat ik in een korte tijdsperiode veel kennis heb opgedaan.
                         Mijn interesse was vanaf het begin al gewekt, waardoor ik bij elke les zeer aandachtig aanwezig was en snel nieuwe concepten kon begrijpen.
