--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -156,12 +156,15 @@
                         We kregen les over de theoretische aspecten van de 3D-printer zelf en ook over het gebruik van het programma Solidworks.
                         In het begin ging het mij niet heel goed af om met Solidworks te werken.
                         Daarom ben ik thuis gaan oefenen, en bij de volgende les ging het veel beter.
+                        Er zaten ook een aantal ontwerp regels aan het ontwerpen vast waar we ons aan moesten houden, omdat anders het ontwerp niet 3d geprint kon worden.
+                        De afbeelding van de regelsstaat hieronder weergeven.
                         Helaas heb ik mijn ontwerp niet kunnen 3D-printen omdat er niet genoeg reserveringsplekken waren bij de 3D-printers.
                         Daarom ben ik samen met Tomas gaan werken. We zijn samen naar de locatie gegaan om de 3D-printer te installeren en ons ontwerp te laten printen.
                         Hieronder zie je een afbeelding met mijn eigen printplaatje en systeem in het bakje dat Tomas heeft ontworpen met mijn hulp.
                     </p>
-                    <img class="logo" src="Hieke\afbeelding\totaal systeem.jpeg" alt="naam" width="300" height="200">  
-                    <img class="logo" src="Hieke\afbeelding\ontwerp 3d.jpeg" alt="naam" width="200" height="200">  
+                    <img class="logo" src="Hieke\afbeelding\totaal systeem.jpeg" alt="naam" width="400" height="300">  
+                    <img class="logo" src="Hieke\afbeelding\ontwerp 3d.jpeg" alt="naam" width="300" height="300">  
+                    <img class="logo" src="Hieke\afbeelding\3d ontwerp regels.jpg" alt="naam" width="300" height="400">  
                 <h4>Terugblik</h4>
                     <p> Na het reflecteren over wat ik heb geleerd, besef ik dat ik in een korte tijdsperiode veel kennis heb opgedaan.
                         Mijn interesse was vanaf het begin al gewekt, waardoor ik bij elke les zeer aandachtig aanwezig was en snel nieuwe concepten kon begrijpen.
@@ -204,6 +207,20 @@
                             <p>Open deze <a href="http://127.0.0.1:5500/Hieke/NASA%20foto%20van%20vandaag.html" target="_blank">link</a> om de NASA 
                                 photo of the day te zien.</p>
                         </iframe>
+                    <h2>Bedrijfbezoek Elk</h2>
+                        <p> We hebben met de hele klas ook nog een bezoek gebracht aan het bedrijf Elk.
+                            Tijdens dit bezoek hebben we uitgebreide informatie gekregen over hun bedrijf en de werkwijze die zij hanteren.
+                            Vervolgens kregen we een opdracht voordat de rondleiding begon, zodat we tijdens de rondleiding ideeën konden opdoen om hun bedrijf meer volgens SMART-industry principes te laten opereren.
+                            De opdracht luidde als volgt: formuleer een advies aan Elk over hoe zij SMART industry beter kunnen integreren in hun bedrijfsvoering en werkprocessen, en presenteer dit advies.
+                            We werden in vier groepen verdeeld en ik heb samen met mijn groepje een bestaande app voorgesteld die we geschikt achtten, vooral voor de herinrichting van studentenwoningen.
+                        </p>
+                        <p> We hebben de Bouwapp voorgesteld, een applicatie waarmee alle aspecten van de omgeving goed kunnen worden gepland.
+                            Specifiek hebben we voorgesteld om deze app te gebruiken bij de herinrichting van studentenwoningen.
+                            Met de Bouwapp kunnen ze eenvoudig de planning aanpassen en bijvoorbeeld vertragingen communiceren.
+                            Dit zou studenten in staat stellen op de hoogte te zijn van eventuele veranderingen, zodat ze op het juiste moment thuis kunnen zijn.
+                            Hieronder is ook een afbeelding te zien van alle vier de onderwerpen waaruit we konden kiezen.
+                        </p>
+                        <img class="logo" src="Hieke\afbeelding\Elk.jpg" alt="naam" width="500" height="400">  
                     </div>
         </div>
     </div>
