--- a/tomas_ontwikkeling.html
+++ b/tomas_ontwikkeling.html
@@ -37,10 +37,16 @@
         </div>
         <div class="main-tomasontwikkeling">
             <h2>Over Mij</h2>
-            <p>Some text..</p>
-            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco. 
+            <p> Ik ben Tomas Leijser, ik ben een vierde jaars student aan de studie Civiele Techniek gespecialiseerd in waterbouwkunde. In de eerste helft van
+                mijn laatste jaar op deze opleiding moet ik deelnemen aan een minor welke zowel verdiepent als verbredent kan zijn. Ik heb ervoor gekozen om een 
+                verbredende minor te kiezen om zo mijn opleidingsvelt te verbreden. 
+            </p>
+            <p> Ik ben op zoek gegaan naar een minor die zich meer richt op de business en het managen van een eigen bedrijf. Het hebben van een eigen bedrijf 
+                is mij met de paplepel ingegoten, mijn vader heeft leven lang al een eigen bedrijf en hij ziet niets liever dan dat zijn jonges ook een eigen
+                bedrijf starten. Het doen van een minor waarbij ik hier les in krijg leek mij dan ook een verstandige keus, het technische deel van de minor 
+                Smart Industry had ik echter anders geïnterpreteerd. Ik had verwacht dat de minor zich zou richten op het brede begrip "techniek" en niet alleen
+                op het ICT gedeelte hiervan. Ondanks dat het werken met data en computers niet voor mij is gemaakt leek het mij wel een erg interessant onderwerp
+                wat enorm actueel is. 
             </p>
             <br>
 
