--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -79,79 +79,108 @@
                         <p>Open deze <a href="files/business-model-canvas Giesbers.pdf" target="_blank">link</a> om het BMC van Giesbers in te zien.</p>
                     </iframe>
 
+            <h2>Kookcursus</h2>
+            <p> In dit hoofdstuk kijk ik door middel van de STAR methode terug op de Kookcursus die wij hebben gehad. 
+            </p>
+                <h4>Sitaution</h4>
+                    <p> De opdracht werd ons voor gelegd om in groepen van zes personen één gerecht klaar te maken voor 25 mensen. Iedere groep had zijn eigen 
+                        gang welke hij voor moest bereiden, voorgerecht, tussengang, hoofdgerecht en dessert. 
+                    </p>
+                <h4>task</h4>
+                    <p> Ik had binnen deze opdracht geen specifieke taak, ik heb mij deze keer redelijk op de achtergrond gehouden. Eén van de medestudenten uit
+                        mijn groepje was een afgestudeeerde kok, deze nam dan ook vrij logisch de leiding. Ik heb de taak gekregen om diverse dingen te snijden,
+                        daarnaast heb ik ook onder begeleiding van deze medestudent de wasabi mayonaise gemaakt. Daarnaast was het mijn taak om met de 
+                        gerechten rond te gaan om iedereen een aantal te geven. 
+                    </p>
+                <h4>Action</h4>
+                    <p> Tijdens het maken van het gerecht zelf liet een medestudent aan mij zien hoe ik diverse dingen moest snijden, hij liet me zoal zien wat 
+                        een goede snijtechniek is maar ook welke delen van de groente lekker zijn en dus behouden moeten worden en welke delen als afval 
+                        gezien mogen worden. Vervolgens toen het snijwerk klaar was heeft een student mij uitgelegd waar een wasabi mayonaise uit bestaat, welke
+                        ingrediënten hier in horen. Hierna ben ik hiermee aan de slag gegaan. Toen alle ingrediënten gereed waren moesten deze ineen gerolt en 
+                        geserveerd worden.
+                    </p>
+                <h4>Result</h4>
+                    <p> Aan het eind van de rit was het eindresultaat van het gerecht meer dan geslaagd, wij waren instaat om als team een ontzettend lekkere 
+                        sushi voor iedereen te bereiden. Echter is het oorspronkelijke plan iets bijgestuurd omdat er een tijdsnood dreeg, inplaats van een 
+                        voorgerecht hebben wij besloten om een amuse te maken welke iedereen van achter het fornuis kon eten. Ondanks deze aanpassing is het 
+                        gerecht te laat geserveerd, dit zou kunnen komen doordat wij als groep niet heel gestroomlijnd te werk gingen. Er waren momenten waarop 
+                        een aantal mensen niks stonden te doen, dit kan natuurlijk niet als het gerecht te laat is. 
+                    </p>
+
 
             <h2>Smart Technology</h2>
             <p> In dit hoofdstuk benoem ik wat ik geleerd heb gedurende de lessen Smart Technology. Ik pak een aantal onderwerpen er tussenuit omdat ik deze 
-                opvallend of leerzaam vind. 
+                opvallend of leerzaam vind. Het terug kijken op deze onderwerpen doe ik doormiddel van de STAR methode omdat ik met deze methode terug kan
+                kijken en reflecteren op de gemaakte onderwerpen.
             </p>
                 <h4>Situation</h4>
-                <p> Voorafgaand aan de minor Smart Industry heb ik nog nooit te maken gehad met iets wat in de buurt komt van het programeren van een chip of
-                    iets dergelijks. Ik had totaal geen voorkennis als het gaat om het vak Smart Technology, het werken in SolidWorks, het maken van een 3D print
-                    en het programeren van een PCB was voor mij volledig nieuw. Ik heb dan ook veel vak inhoudelijke kennis gemist bij het werken aan deze 
-                    onderwerpen. 
-                </p>
+                    <p> Voorafgaand aan de minor Smart Industry heb ik nog nooit te maken gehad met iets wat in de buurt komt van het programeren van een chip of
+                        iets dergelijks. Ik had totaal geen voorkennis als het gaat om het vak Smart Technology, het werken in SolidWorks, het maken van een 3D print
+                        en het programeren van een PCB was voor mij volledig nieuw. Ik heb dan ook veel vak inhoudelijke kennis gemist bij het werken aan deze 
+                        onderwerpen. 
+                    </p>
 
                 <h4>Task</h4>
-                <p> De taak die mij gegeven werd voor het vak Smart Technology was het programeren van een PCB-chip, het doel van deze taak was het maken van 
-                    een systeem welke automatisch een plant voor je onderhoud. Het gaat hierbij om het watergeven en lichtgeven indien de plant dit nodig heeft. 
-                    Daarnaast moest ik zelf een printplaat ontwerpen voor dit systeem en voor de bruikbaarheid een omhulsel 3D printen waar de chip, de sensoren
-                    en de pomp en dergelijke in afgewerkt kan worden. 
-                </p>
+                    <p> De taak die mij gegeven werd voor het vak Smart Technology was het programeren van een PCB-chip, het doel van deze taak was het maken van 
+                        een systeem welke automatisch een plant voor je onderhoud. Het gaat hierbij om het watergeven en lichtgeven indien de plant dit nodig heeft. 
+                        Daarnaast moest ik zelf een printplaat ontwerpen voor dit systeem en voor de bruikbaarheid een omhulsel 3D printen waar de chip, de sensoren
+                        en de pomp en dergelijke in afgewerkt kan worden. 
+                    </p>
 
                 <h4>Action</h4>
-                <p> Om tot het eind resultaat te komen zijn we begonnen bij de basis, zoals eerder vermeld was alles nieuw voor mij dus de basis bleek al een 
-                    uitdaging. We zijn begonnen met het programeren van alle sensoren appart van elkaar, op deze manier kon ik gemakkelijk kennis maken met het 
-                    werken binnen visual studio code. Naast het programeren van de chip moesten de onderdelen ook op de juiste manier verbonden worden met de 
-                    PCB. Dit vond ik vooral erg leuk, het puzzelen met deze onderdelen en het monteren van de draden op de juiste plek. De verschillende sensoren 
-                    appart van elkaar zijn hieronder weergeven. 
-                </p>
-                <img class="logo" src="images/1. Tomas/1. Licht sensor.jpg" alt="Licht sensor" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/2. Vocht sensor.jpg" alt="Vocht sensor" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/3. Temperatuur sensor.jpg" alt="Temperatuur sensor" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/4. Klikaan-klikuit.jpg" alt="Klikaan-klikuit" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/5. Relais en pomp.jpg" alt="Relais en pomp" width="250" height="167"> 
-                <p> Nadat ik alle onderdelen appart van elkaar geprogrammeerd had moesten ze in één code verwerkt worden. Dit zou de definitieve code worden 
-                    waarmee ik de PCB aan kan sturen om de plant water te geven wanneer deze dat nodig heeft en een lamp aan te zetten wanneer het te lang donker
-                    is geweest. Ik ben begonnen met de vocht sensor als basis te pakken en vervolgens de andere sensoren hierin bij te voegen. Het toevoegen 
-                    van de andere chips is mij echter helaas niet gelukt, telkens wanneer ik een andere sensor toe voeg komen er errors naar boven en door het 
-                    gebrek aan kennis over dit onderwerp is het mij niet gelukt om deze errors te verhelpen. Ik heb andere studenten geraadpleegd maar ook zij 
-                    wisten niet hoe ik deze problemen kon verhelpen. 
-                </p>
-                <p> Om te zorgen dat in het eindresultaat niet allemaal losse draden aanwezig zijn heb ik een printplaat ontworpen waarin de meeste draden 
-                    verwerkt zijn. Op deze printplaat heb vervolgens de PCB vast gemonteerd, dit heb ik gedaan doormiddel van solderen. Om te zorgen dat de PCB
-                    nog los te halen is van de printplaat heb ik een aantal opzet stukken gebruikt, deze heb ik aan de printplaat vast gesoldeerd. Indien de 
-                    printplaat kapot gaat kan ik de PCB er altijd nog vanaf halen. Hieronder heb ik een aantal foto's toegevoegd van het soldeerwerk en de 
-                    printplaat. 
-                </p>
-                <img class="logo" src="images/1. Tomas/Printplaat schematics.png" alt="Printplaat schematics" width="165" height="167"> 
-                <img class="logo" src="images/1. Tomas/Printplaat ontwerp.png" alt="Printplaat ontwerp" width="165" height="167"> 
-                <img class="logo" src="images/1. Tomas/Printplaat.jpg" alt="Printplaat" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/Soldeerwerk.jpg" alt="Soldeerwerk" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/printplaat boven.jpg" alt="printplaat boven" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/Printplaat zij.jpg" alt="Printplaat zij" width="250" height="167"> 
-                <p> Tot slot moet er ook een doosje gemaakt worden waar alle sensoren in afgewerkt kunnen worden. Dit doosje dien ik te 
-                    maken met behulp van een 3D printer, om dit mogelijk te maken moet er eerst een 3D ontwerp van gemaakt worden. Dit ontwerp heb ik in 
-                    SolidWorks gemaakt, dit was de eerste keer dat ik met dit programma gewerkt heb. Het was dan ook erg fijn dat we les hebben gekregen over het 
-                    werken met dit programma, echter was het jammer dat deze lessen meer over de geschiedenis en de toepasingen van 3D printen gingen dan over het
-                    werken met het programma. Ondanks dit ben ik trost op mijzelf voor het eindresultaat van de 3D print, een aantal afbeeldingen van zowel het 
-                    ontwerp als het eindresultaat heb ik hieronder toegevoegd.
-                </p>
-                <img class="logo" src="images/1. Tomas/Bakje bovenaanzicht.png" alt="Bakje bovenaanzicht" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/Bovenaanzicht bakje.png" alt="Bovenaanzicht bakje" width="200" height="167"> 
-                <img class="logo" src="images/1. Tomas/Doorsnede bakje.png" alt="Doorsnede bakje" width="250" height="167"> 
-                <img class="logo" src="images/1. Tomas/Bakje geheel.jpg" alt="Bakje geheel" width="125" height="167"> 
+                    <p> Om tot het eind resultaat te komen zijn we begonnen bij de basis, zoals eerder vermeld was alles nieuw voor mij dus de basis bleek al een 
+                        uitdaging. We zijn begonnen met het programeren van alle sensoren appart van elkaar, op deze manier kon ik gemakkelijk kennis maken met het 
+                        werken binnen visual studio code. Naast het programeren van de chip moesten de onderdelen ook op de juiste manier verbonden worden met de 
+                        PCB. Dit vond ik vooral erg leuk, het puzzelen met deze onderdelen en het monteren van de draden op de juiste plek. De verschillende sensoren 
+                        appart van elkaar zijn hieronder weergeven. 
+                    </p>
+                    <img class="logo" src="images/1. Tomas/1. Licht sensor.jpg" alt="Licht sensor" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/2. Vocht sensor.jpg" alt="Vocht sensor" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/3. Temperatuur sensor.jpg" alt="Temperatuur sensor" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/4. Klikaan-klikuit.jpg" alt="Klikaan-klikuit" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/5. Relais en pomp.jpg" alt="Relais en pomp" width="250" height="167"> 
+                    <p> Nadat ik alle onderdelen appart van elkaar geprogrammeerd had moesten ze in één code verwerkt worden. Dit zou de definitieve code worden 
+                        waarmee ik de PCB aan kan sturen om de plant water te geven wanneer deze dat nodig heeft en een lamp aan te zetten wanneer het te lang donker
+                        is geweest. Ik ben begonnen met de vocht sensor als basis te pakken en vervolgens de andere sensoren hierin bij te voegen. Het toevoegen 
+                        van de andere chips is mij echter helaas niet gelukt, telkens wanneer ik een andere sensor toe voeg komen er errors naar boven en door het 
+                        gebrek aan kennis over dit onderwerp is het mij niet gelukt om deze errors te verhelpen. Ik heb andere studenten geraadpleegd maar ook zij 
+                        wisten niet hoe ik deze problemen kon verhelpen. 
+                    </p>
+                    <p> Om te zorgen dat in het eindresultaat niet allemaal losse draden aanwezig zijn heb ik een printplaat ontworpen waarin de meeste draden 
+                        verwerkt zijn. Op deze printplaat heb vervolgens de PCB vast gemonteerd, dit heb ik gedaan doormiddel van solderen. Om te zorgen dat de PCB
+                        nog los te halen is van de printplaat heb ik een aantal opzet stukken gebruikt, deze heb ik aan de printplaat vast gesoldeerd. Indien de 
+                        printplaat kapot gaat kan ik de PCB er altijd nog vanaf halen. Hieronder heb ik een aantal foto's toegevoegd van het soldeerwerk en de 
+                        printplaat. 
+                    </p>
+                    <img class="logo" src="images/1. Tomas/Printplaat schematics.png" alt="Printplaat schematics" width="165" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Printplaat ontwerp.png" alt="Printplaat ontwerp" width="165" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Printplaat.jpg" alt="Printplaat" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Soldeerwerk.jpg" alt="Soldeerwerk" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/printplaat boven.jpg" alt="printplaat boven" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Printplaat zij.jpg" alt="Printplaat zij" width="250" height="167"> 
+                    <p> Tot slot moet er ook een doosje gemaakt worden waar alle sensoren in afgewerkt kunnen worden. Dit doosje dien ik te 
+                        maken met behulp van een 3D printer, om dit mogelijk te maken moet er eerst een 3D ontwerp van gemaakt worden. Dit ontwerp heb ik in 
+                        SolidWorks gemaakt, dit was de eerste keer dat ik met dit programma gewerkt heb. Het was dan ook erg fijn dat we les hebben gekregen over het 
+                        werken met dit programma, echter was het jammer dat deze lessen meer over de geschiedenis en de toepasingen van 3D printen gingen dan over het
+                        werken met het programma. Ondanks dit ben ik trost op mijzelf voor het eindresultaat van de 3D print, een aantal afbeeldingen van zowel het 
+                        ontwerp als het eindresultaat heb ik hieronder toegevoegd.
+                    </p>
+                    <img class="logo" src="images/1. Tomas/Bakje bovenaanzicht.png" alt="Bakje bovenaanzicht" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Bovenaanzicht bakje.png" alt="Bovenaanzicht bakje" width="200" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Doorsnede bakje.png" alt="Doorsnede bakje" width="250" height="167"> 
+                    <img class="logo" src="images/1. Tomas/Bakje geheel.jpg" alt="Bakje geheel" width="125" height="167"> 
                 <h4>Result</h4>
-                <p> Als ik terug kijk op al deze lessen, workshops en opdrachten valt het mij op dat zelfs wanneer ik ergens totaal geen kennis van heb en ik 
-                    enorm op zie tegen het feit dat ik een bepaalde opdracht moet maken, het mij alsnog lukt indien ik gewoon hulp vraag wanneer dit nodig is. 
-                    Hoe moeilijk het soms ook is om iets volledig nieuws te leren en hoe vervelend het ook is om in het diepe gegooit te worden, alles kan je 
-                    leren als je vragen stelt en je er aan overgeeft om het te leren. 
-                </p>
-                <p> Zoals eerder vermeld was het programmeren voor mij de grootste uitdaging in deze minor en toch had ik na de eerste les van Smart Technology 
-                    al een chip geprogrammeerd. Het is me helaas niet gelukt om alle apparte taken van de PCB samen te voegen in één document, dit komt deels 
-                    door het gebrek aan kennis echter als ik meer tijd hiervoor had genomen had ik een dag samen kunnen gaan zitten met een docent of medestudent.
-                    Nu moest ik het doen met enkel app contact met medestudenten, hier heb ik de laatste stap helaas niet gehaald. Echter ben ik nogsteeds enorm
-                    tevreden met hoe ver ik wel ben gekomen en hoeveel ik heb geleerd de afgelopen weken. 
-                </p>
+                    <p> Als ik terug kijk op al deze lessen, workshops en opdrachten valt het mij op dat zelfs wanneer ik ergens totaal geen kennis van heb en ik 
+                        enorm op zie tegen het feit dat ik een bepaalde opdracht moet maken, het mij alsnog lukt indien ik gewoon hulp vraag wanneer dit nodig is. 
+                        Hoe moeilijk het soms ook is om iets volledig nieuws te leren en hoe vervelend het ook is om in het diepe gegooit te worden, alles kan je 
+                        leren als je vragen stelt en je er aan overgeeft om het te leren. 
+                    </p>
+                    <p> Zoals eerder vermeld was het programmeren voor mij de grootste uitdaging in deze minor en toch had ik na de eerste les van Smart Technology 
+                        al een chip geprogrammeerd. Het is me helaas niet gelukt om alle apparte taken van de PCB samen te voegen in één document, dit komt deels 
+                        door het gebrek aan kennis echter als ik meer tijd hiervoor had genomen had ik een dag samen kunnen gaan zitten met een docent of medestudent.
+                        Nu moest ik het doen met enkel app contact met medestudenten, hier heb ik de laatste stap helaas niet gehaald. Echter ben ik nogsteeds enorm
+                        tevreden met hoe ver ik wel ben gekomen en hoeveel ik heb geleerd de afgelopen weken. 
+                    </p>
                 <br>
                 
             <h2>Smart Connection</h2>
