Video's toegevoegd aan pagina's Matilda

--- a/Matilda/matilda_smartme.html
+++ b/Matilda/matilda_smartme.html
@@ -256,10 +256,15 @@
         <p>Daarnaast kregen we ook te horen wat er op de website moet komen te staan en ben ik thuis na de workshop
             zelfstandig aan de slag gegaan met de website en heb ik alvast gewerkt aan het werkend krijgen van mijn
             smartwatersysteem (zie video hieronder).</p>
-        <video width="750" height="500" controls poster="../videos/IMG_6566_test.mov">
-            <source src="../videos/IMG_6566_test.mov" type="video/mp4">
-            Installeer een nieuwere versie van je browser als je deze video wilt bekijken.
-        </video>
+        <div class="video-width">
+            <div class="aspect-ratio">
+                <iframe class="video" src="https://www.youtube.com/embed/2mx6LXAGNMg" allowfullscreen="allowfullscreen">
+                    <p>Deze browser ondersteunt geen iFrames.</p>
+                    <p>Open deze <a href="https://www.youtube.com/embed/2mx6LXAGNMg" target="_blank">link</a> om de
+                        video te bekijken.</p>
+                </iframe>
+            </div>
+        </div>
         </br>
         <script>
             $(function () {
