--- a/Matilda/matilda_smarttechnology.html
+++ b/Matilda/matilda_smarttechnology.html
@@ -164,10 +164,17 @@
 
         <h2>Eindresultaat</h2>
         <p> In onderstaande video is mijn werkende smartwaterplantsysteem te zien.</p>
-        <video width="750" height="500" controls poster="../videos/IMG_6866_final.mov">
-            <source src="../videos/IMG_6866_final.mov" type="video/mp4">
-            Installeer een nieuwere versie van je browser als je deze video wilt bekijken.
-        </video>
+        <div class="video-width">
+            <div class="aspect-ratio">
+                <iframe class="video" src="https://youtube.com/embed/V3pAo1bcpyo" allowfullscreen="allowfullscreen">
+                    <p>Deze browser ondersteunt geen iFrames.</p>
+                    <p>Open deze <a href="https://youtube.com/embed/V3pAo1bcpyo" target="_blank">link</a> om de video te
+                        bekijken.</p>
+                </iframe>
+            </div>
+        </div>
+        <p> Met bewijs dat de data ook naar InfluxDB geschreven wordt:</p>
+        <img src="../images/Resultaten influxdb.png">
         </br>
         <p>Ik ben supertrots op het eindresultaat en had van te voren nooit bedacht dat ik zelf een
             smartwaterplantsysteem
