afbeelding en kookkles

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -221,6 +221,50 @@
                             Hieronder is ook een afbeelding te zien van alle vier de onderwerpen waaruit we konden kiezen.
                         </p>
                         <img class="logo" src="Hieke\afbeelding\Elk.jpg" alt="naam" width="500" height="400">  
+                    <h2>Kookles</h2>
+                    <p> De kookles die we met zijn allen, maar wel in groepjes, gevolgd hebben was leuk.
+                        Wel was deze kookles erg onverwacht in het begin van onze minor.
+                        Later, toen de kookles voorbij was, gaven we allemaal aan dat we toen pas begrepen waar hij voor bedoeld was.
+                        Om de kookles te omschrijven, doe ik dit in de vorm van een STARR-reflectie.
+                    </p>
+                    <h4>Situatie:</h4>
+                    <p> In een team van zes moesten we een gerecht kiezen.
+                        Er was keuze tussen een aperitief, voorgerecht, hoofdgerecht, of dessert, elk vertegenwoordigd in bakken op verschillende tafels met diverse ingrediënten.
+                        Op de afbeelding die onderaan de tekst is getoont staan deze bakken.
+                        Nadat de groepen waren gevormd, moesten we met onze ingrediënten een zelfbedacht gerecht maken.
+                        Tevens was het de opdracht om alleen de benodigde hoeveelheid ingrediënten te pakken om zo min mogelijk restafval te hebben.
+                        We hadden ongeveer 1,5 uur om te koken voor in totaal 25 personen.
+                    </p>
+                    <h4>Taak:</h4>
+                    <p> Mijn specifieke taak was het voorbereiden en vouwen van het bladerdeeg voor het gerecht.
+                        Daarnaast nam ik de leiding in het coördineren van de taken binnen het team en gaf ik mijn mening over bepaalde hoeveelheden voor het gerecht.
+                        Hierdoor werd het mijn verantwoordelijkheid om het overzicht te behouden.
+                    </p>
+                    <h4>Actie:</h4>
+                    <p> Op een gegeven moment besefte ik dat ik niet genoeg tijd zou hebben om het bladerdeeg alleen klaar te maken.
+                        Daarom vroeg ik om hulp en liet ik mijn groepsgenoot zien hoe je bladerdeeg moet snijden, vouwen en prikken met een vork.
+                        Nadat mijn groepsgenoot hier bedreven in raakte, stelde ik voor om als een lopende band te werken.
+                        Ik nam de eerste stappen en mijn groepsgenoot voltooide het proces.
+                    </p>
+                    <h4>Resultaat:</h4>
+                    <p> Het gerecht was op tijd klaar, maar we waren niet helemaal tevreden met het resultaat.
+                        We hadden namelijk lange vinger kruimels gebruikt tussen vloeibare lagen, waardoor de kruimels niet meer krokant waren bij het serveren.
+                        Ook hadden we niet alle hoeveelheden ingrediënten nauwkeurig ingeschat, waardoor we een kleine hoeveelheid moesten weggooien.
+                        Desondanks was dit nog vrij minimaal.
+                    </p>
+                    <h4>Reflectie:</h4>
+                    <p> + Het gerecht is gemaakt en we waren op tijd klaar als team.
+                        Hieronder staat ons afgerondde toetje afgebeeld.
+                        -  Niet alle ingrediënten gebruikt: ik had onderzoek moeten doen naar de benodigde hoeveelheden voor het aantal mensen aan wie wij serveerden.
+                           Het bladerdeeg hadden we daarom kunnen terugleggen in de vriezer in plaats van een deel weg te gooien.
+                    </p>
+                    <h4>leerdoel:</h4>
+                    <p> Meer procesmatig te werk gaan bij het opstarten van de kookles.
+                        Ik ging op gevoel aan de slag zonder grondig onderzoek te doen.
+                        Andere groepen pakten het anders aan door toekomstige problemen proactief aan te pakken, zodat we niet vastliepen.
+                    </p>
+                    <img class="logo" src="Hieke\afbeelding\toetje.jpg" alt="naam" width="250" height="400">  
+                    <img class="logo" src="Hieke\afbeelding\kookles bak.jpg" alt="naam" width="300" height="400">  
                     </div>
         </div>
     </div>
