over mezelf hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -35,8 +35,15 @@
         </div>
         <div class="main-hiekeontwikkeling">
             <h2>Over Mij</h2>
-            <p>Some text..</p>
-            <p>1e kopje
+            <p>Ik ben Hieke Stoof, 20 jaar oud, en woonachtig in Deventer.
+                Ik studeer Civiele Techniek aan de HAN in Arnhem en zit al in mijn 4e jaar, met als afstudeerrichting waterbouwkunde.
+                Deze studie heb ik gekozen omdat ik van kinds af aan altijd bezig ben geweest met techniek door mijn vader te helpen klussen.
+                Op latere leeftijd merkte ik dat het me nog steeds erg interesseerde en dat ik graag een studie wou met later een breede toekomst.
+            </p>
+            <p>Echter, in de bouwwereld loopt alles vaak nog een beetje achter op het gebied van technologie.
+                Met een blik op de toekomst heb ik daarom gekozen voor de minor Smart Industry.
+                Het leek me erg handig om een deel van de nieuwe technologieën mee te nemen in mijn werk en zo mijn kennis alvast te verbreden.
+                Het sprak me daarom erg aan om met 3D-printen en programmeren te gaan werken en hopelijk zo deze nieuwe technieken te integreren in de bouwwereld.
             </p>
             <br>
 
