--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -218,6 +218,7 @@
                             Specifiek hebben we voorgesteld om deze app te gebruiken bij de herinrichting van studentenwoningen.
                             Met de Bouwapp kunnen ze eenvoudig de planning aanpassen en bijvoorbeeld vertragingen communiceren.
                             Dit zou studenten in staat stellen op de hoogte te zijn van eventuele veranderingen, zodat ze op het juiste moment thuis kunnen zijn.
+                            Ik vond het erg interresant om op deze manier iets nieuws voor een bedrijf te vinden.
                             Hieronder is ook een afbeelding te zien van alle vier de onderwerpen waaruit we konden kiezen.
                         </p>
                         <img class="logo" src="Hieke\afbeelding\Elk.jpg" alt="naam" width="500" height="400">  
