--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -26,6 +26,7 @@
     <div class="row">
         <div class="side-hieke">
             <h2>Hieke Stoof</h2>
+            <img class="fakeimg" src="Hieke\afbeelding\profielfoto hieke.jpg" alt="profielfoto hieke" width="290" height="400">
             <h2>Contact</h2>
             <h3>Email:</h3>HJ.stoof@Student.HAN.nl
             <h3>Telefoon:</h3>+31(0) 6 2522 0274
